--- a/package.json
+++ b/package.json
@@ -38,8 +38,11 @@
   "license": "ISC",
   "dependencies": {
     "gulp-json-to-sass": "0.0.4",
-    "picturefill": "^3.0.2",
     "jquery": "3.1.1",
-    "svg4everybody": "^2.1.3"
+    "masonry-layout": "^4.1.1",
+    "object-fit": "^0.4.3",
+    "picturefill": "^3.0.2",
+    "svg4everybody": "^2.1.3",
+    "video.js": "^5.15.1"
   }
 }
